--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 <body>
     <header>
         <h1>Web Studio</h1>
+        <ul>
+            <li><a href="">Студия</a></li>
+            <li><a href="">Портфолио</a></li>
+            <li><a href="">Контакты</a></li>
+        </ul>
+        <a href="info@devstudio.com">info@devstudio.com</a>
+        <a href="+380961111111">+38 096 111 11 11</a>
     </header>
 </body>
 </html>
