--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <header>
+        <!-- Шапка -->
         <h1>Web Studio</h1>
         <ul>
             <li><a href="">Студия</a></li>
@@ -16,5 +17,23 @@
         <a href="info@devstudio.com">info@devstudio.com</a>
         <a href="+380961111111">+38 096 111 11 11</a>
     </header>
+    <main>
+        <!-- Герой -->
+         <section>
+             <h1>Эффективные решения для вашего бизнеса</h1>
+             <a href="">Заказать услугу</a>
+         </section>
+         <!-- Функции -->
+         <section>
+             <h1>Функции</h1>
+             <ul>
+                 <li>
+                     <img src="./GitHub/goit-markup-hw-01/функции/vector.png" alt="">
+                     <h2>Внимание к деталям</h2>
+                 </li>
+             </ul>
+         </section>
+            
+    </main>
 </body>
 </html>
