--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                  <li>
                      <img src="./GitHub/goit-markup-hw-01/функции/vector.png" alt="">
                      <h2>Внимание к деталям</h2>
+                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                  </li>
              </ul>
          </section>
