--- a/index.html
+++ b/index.html
@@ -32,7 +32,27 @@
                      <h2>Внимание к деталям</h2>
                      <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                  </li>
+                 <li>
+                     <img src="./GitHub/goit-markup-hw-01/функции/vector1.png" alt="">
+                     <h2>Пунктуальность</h2>
+                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                 </li>
+                 <li>
+                    <img src="./GitHub/goit-markup-hw-01/функции/vector2.png" alt="">
+                    <h2>Планирование</h2>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                 </li>
+                 <li>
+                    <img src="./GitHub/goit-markup-hw-01/функции/vector3.png" alt="">
+                     <h2>Современные технологии</h2>
+                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                 </li>
+                 
              </ul>
+         </section>
+         <!-- Чем мы занимаемся -->
+         <section>
+             <h1>Чем мы занимаемся</h1>
          </section>
             
     </main>
