--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
              <h1>Функции</h1>
              <ul>
                  <li>
-                     <img src="./GitHub/goit-markup-hw-01/функции/vector.png" alt="">
+                     <img src="./images/функции/vector.png" alt="">
                      <h2>Внимание к деталям</h2>
                      <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                  </li>
                  <li>
-                     <img src="./GitHub/goit-markup-hw-01/функции/vector1.png" alt="">
+                     <img src="./images/функции/vector1.png" alt="">
                      <h2>Пунктуальность</h2>
                      <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                  </li>
                  <li>
-                    <img src="./GitHub/goit-markup-hw-01/функции/vector2.png" alt="">
+                    <img src="./images/функции/vector2.png" alt="">
                     <h2>Планирование</h2>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                  </li>
                  <li>
-                    <img src="./GitHub/goit-markup-hw-01/функции/vector3.png" alt="">
+                    <img src="./images/функции/vector3.png" alt="">
                      <h2>Современные технологии</h2>
                      <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                  </li>
@@ -53,6 +53,29 @@
          <!-- Чем мы занимаемся -->
          <section>
              <h1>Чем мы занимаемся</h1>
+             <ul>
+                 <li>
+                     <img src="./C:/Users/Юрий/Documents/GitHub/box.png" alt="">
+                     <h2>Десктопные приложения</h2>
+                 </li>
+                 <li>
+                    <img src="./C:/Users/Юрий/Documents/GitHub/img.png" alt="">
+                    <h2>Мобильные приложения</h2>
+                 </li>
+                 <li>
+                     <img src="./C:/Users/Юрий/Documents/GitHub/img (1).png" alt="">
+                     <h2>Дизайнерские решения</h2>
+                 </li>
+             </ul>
+         </section>
+         <!-- Наша команда -->
+         <section>
+             <h1>Наша команда</h1>
+             <ul>
+                 <li>
+                     <img src="./C:/Users/Юрий/Documents/GitHub/img (2).png" alt="">
+                 </li>
+             </ul>
          </section>
             
     </main>
