--- a/index.html
+++ b/index.html
@@ -76,34 +76,58 @@
                      <img src="./C:/Users/Юрий/Documents/GitHub/img (2).png" alt="">
                      <h2>John Smith</h2>
                      <h3>Product Designer</h3>
-                     <li><a href="">Instagram</a></li>  
-                     <li><a href="">Twitter</a></li>
-                     <li><a href="">Facebook</a></li>
-                     <li><a href="">Linkedln</a></li>
+                     <ul>
+                       <li><a href="">Instagram</a></li>  
+                       <li><a href="">Twitter</a></li>
+                       <li><a href="">Facebook</a></li>
+                       <li><a href="">Linkedln</a></li>
+                     </ul>
                  </li>
                  <li>
                     <img src="./C:/Users/Юрий/Documents/GitHub/img (3).png" alt="">
                     <h2>Marta Stewart</h2>
                     <h3>Frontend Developer</h3>
-                    <li><a href="">Instagram</a></li>  
-                    <li><a href="">Twitter</a></li>
-                    <li><a href="">Facebook</a></li>
+                    <ul>
+                      <li><a href="">Instagram</a></li>  
+                      <li><a href="">Twitter</a></li>
+                      <li><a href="">Facebook</a></li>
+                      <li><a href="">Linkedln</a></li>
+                    </ul>
                  </li>
                  <li>
                     <img src="./C:/Users/Юрий/Documents/GitHub/img (4).png" alt="">
                     <h2>Robert Jakis</h2>
                     <h3>Marketing</h3>
-                    <li><a href="">Instagram</a></li>  
-                    <li><a href="">Facebook</a></li>
-                    <li><a href="">Linkedln</a></li>
+                    <ul>
+                      <li><a href="">Instagram</a></li>  
+                      <li><a href="">Twitter</a></li>
+                      <li><a href="">Facebook</a></li>
+                      <li><a href="">Linkedln</a></li>
+                    </ul>
                  </li>
                  <li>
                     <img src="./C:/Users/Юрий/Documents/GitHub/img (5).png" alt="">
                     <h2>Martin Doe</h2>
                     <h3>UI Designer</h3>
-                    <li><a href="">Instagram</a></li>  
-                    <li><a href="">Facebook</a></li>
+                    <ul>
+                      <li><a href="">Instagram</a></li>  
+                      <li><a href="">Twitter</a></li>
+                      <li><a href="">Facebook</a></li>
+                      <li><a href="">Linkedln</a></li>
+                    </ul>
                  </li>
+             </ul>
+         </section>
+         <!-- Постоянные клиенты -->
+         <section>
+             <h1>Постоянные клиенты</h1>
+             <ul>
+                 <li><img src="./C:/Users/Юрий/Documents/GitHub/logo 1.png" alt=""></li>
+                 <li><img src="./C:/Users/Юрий/Documents/GitHub/logo 2.png" alt=""></li>
+                 <li><img src="./C:/Users/Юрий/Documents/GitHub/logo 3.png" alt=""></li>
+                 <li><img src="./C:/Users/Юрий/Documents/GitHub/logo 4.png" alt=""></li>
+                 <li><img src="./C:/Users/Юрий/Documents/GitHub/logo 5.png" alt=""></li>
+                 <li><img src="./C:/Users/Юрий/Documents/GitHub/logo 6.png" alt=""></li>
              </ul>
          </section>
             
