--- a/index.html
+++ b/index.html
@@ -2,20 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta> name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Document</title>
 </head>
 <body>
     <header>
         <!-- Шапка -->
-        <h1>Web Studio</h1>
-        <ul>
+        <nav>
+         <a href="">Web Studio</a>
+         <ul>
             <li><a href="">Студия</a></li>
             <li><a href="">Портфолио</a></li>
             <li><a href="">Контакты</a></li>
-        </ul>
-        <a href="info@devstudio.com">info@devstudio.com</a>
-        <a href="+380961111111">+38 096 111 11 11</a>
+         </ul>
+         <ul>
+           <li><a href="info@devstudio.com">info@devstudio.com</a</li>
+           <li><a href="+380961111111">+38 096 111 11 11</a></li>
+         </ul>
+        </nav>
     </header>
     <main>
         <!-- Герой -->
@@ -55,16 +59,22 @@
              <h1>Чем мы занимаемся</h1>
              <ul>
                  <li>
-                     <img src="./C:\Users\Юрий\Documents\GitHub\img.jpg" alt="">
-                     <h2>Десктопные приложения</h2>
+                    <figure>
+                     <img class="photo" src="./images/img.jpg" alt="photo">
+                     <figcaption>Десктопные приложения</figcaption>
+                    </figure>
                  </li>
                  <li>
-                    <img src="./C:/Users/Юрий/Documents/GitHub/img.png" alt="">
-                    <h2>Мобильные приложения</h2>
+                    <figure>
+                     <img class="photo" src="./images/img1.jpg" alt="photo">
+                     <figcaption2>Мобильные приложения</figcaption>
+                    </figure>    
                  </li>
                  <li>
-                     <img src="./C:/Users/Юрий/Documents/GitHub/img (1).png" alt="">
-                     <h2>Дизайнерские решения</h2>
+                    <figure>
+                     <img class="photo" src="./images/img1.jpg" alt="photo">
+                     <figcaption>Дизайнерские решения</figcaption>
+                    </figure>
                  </li>
              </ul>
          </section>
@@ -130,7 +140,11 @@
                  <li><a href=""></a>client6</li>
              </ul>
          </section>
-            
-    </main>
+    </main>       
+    <!-- Футер --> 
+    <footer>
+
+    </footer>
+    
 </body>
 </html>
