--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
             <li><a href="">Контакты</a></li>
          </ul>
          <ul>
-           <li><a href="info@devstudio.com">info@devstudio.com</a</li>
+           <li><a href="info@devstudio.com">info@devstudio.com</a></li>
            <li><a href="+380961111111">+38 096 111 11 11</a></li>
          </ul>
         </nav>
@@ -67,7 +67,7 @@
                  <li>
                     <figure>
                      <img class="photo" src="./images/img1.jpg" alt="photo">
-                     <figcaption2>Мобильные приложения</figcaption>
+                     <figcaption>Мобильные приложения</figcaption>
                     </figure>    
                  </li>
                  <li>
