--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
              <ul>
                  <li>
                     <figure>
-                     <img class="photo" src="./images/img.jpg" alt="photo">
+                     <img src="./images/img.jpg" alt="photo" width="370" />
                      <figcaption>Десктопные приложения</figcaption>
                     </figure>
                  </li>
                  <li>
                     <figure>
-                     <img class="photo" src="./images/img1.jpg" alt="photo">
+                     <img src="./images/img1.jpg" alt="photo" width="370" />
                      <figcaption>Мобильные приложения</figcaption>
                     </figure>    
                  </li>
                  <li>
                     <figure>
-                     <img class="photo" src="./images/img1.jpg" alt="photo">
+                     <img src="./images/img2.jpg" alt="photo" width="370" />
                      <figcaption>Дизайнерские решения</figcaption>
                     </figure>
                  </li>
@@ -83,7 +83,7 @@
              <h1>Наша команда</h1>
              <ul>
                  <li>
-                     <img src="./C:/Users/Юрий/Documents/GitHub/img (2).png" alt="">
+                     <img src="./images/photo.jpg" alt="photo" width="270" />
                      <h2>John Smith</h2>
                      <h3>Product Designer</h3>
                      <ul>
@@ -94,7 +94,7 @@
                      </ul>
                  </li>
                  <li>
-                    <img src="./C:/Users/Юрий/Documents/GitHub/img (3).png" alt="">
+                    <img src="./images/photo1.jpg" alt="photo" width="270" />
                     <h2>Marta Stewart</h2>
                     <h3>Frontend Developer</h3>
                     <ul>
@@ -105,7 +105,7 @@
                     </ul>
                  </li>
                  <li>
-                    <img src="./C:/Users/Юрий/Documents/GitHub/img (4).png" alt="">
+                    <img src="./images/photo2.jpg" alt="photo" width="270" />
                     <h2>Robert Jakis</h2>
                     <h3>Marketing</h3>
                     <ul>
@@ -116,7 +116,7 @@
                     </ul>
                  </li>
                  <li>
-                    <img src="./C:/Users/Юрий/Documents/GitHub/img (5).png" alt="">
+                    <img src="./images/photo3.jpg" alt="photo" width="270" />
                     <h2>Martin Doe</h2>
                     <h3>UI Designer</h3>
                     <ul>
