--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <!-- Шапка -->
+        <!-- Site header -->
         <nav>
          <a href="">Web Studio</a>
          <ul>
@@ -22,12 +22,12 @@
         </nav>
     </header>
     <main>
-        <!-- Герой -->
+        <!-- Hero -->
          <section>
              <h1>Эффективные решения для вашего бизнеса</h1>
              <a href="">Заказать услугу</a>
          </section>
-         <!-- Функции -->
+         <!-- Functions -->
          <section>
              <h1>Функции</h1>
              <ul>
@@ -54,7 +54,7 @@
                  
              </ul>
          </section>
-         <!-- Чем мы занимаемся -->
+         <!-- What are we doing -->
          <section>
              <h1>Чем мы занимаемся</h1>
              <ul>
@@ -78,7 +78,7 @@
                  </li>
              </ul>
          </section>
-         <!-- Наша команда -->
+         <!-- Our team -->
          <section>
              <h1>Наша команда</h1>
              <ul>
@@ -128,7 +128,7 @@
                  </li>
              </ul>
          </section>
-         <!-- Постоянные клиенты -->
+         <!-- Regular customers -->
          <section>
              <h1>Постоянные клиенты</h1>
              <ul>
@@ -141,7 +141,7 @@
              </ul>
          </section>
     </main>       
-    <!-- Футер --> 
+    <!-- Footer --> 
     <footer>
 
     </footer>
