--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
              <ul>
                  <li>
 
-                     <img src="./photo/Vector1.png" />
+                     <img src="./photo/Vector1.png" alt=""/>
                      <h2>Внимание к деталям</h2>
                      <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                  </li>
                  <li>
-                     <img src="./photo/Vector2.png" />
+                     <img src="./photo/Vector2.png" alt=""/>
                      <h2>Пунктуальность</h2>
                      <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                  </li>
                  <li>
-                     <img src="./photo/Vector3.png" />
+                     <img src="./photo/Vector3.png" alt=""/>
                      <h2>Планирование</h2>
                      <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                  </li>
                  <li>
-                     <img src="./photo/Vector4.png" />
+                     <img src="./photo/Vector4.png" alt=""/>
                      <h2>Современные технологии</h2>
                      <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                  </li>
