--- a/index.html
+++ b/index.html
@@ -145,27 +145,23 @@
     <!-- Footer --> 
     <footer>
         <a href="#"><span>Web</span>Studio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
-        <ul>
+        <address>
+          <ul>
+            <li><p>г. Киев, пр-т Леси Украинки, 26</p></li>
             <li><a href="info@example.com">info@example.com</a></li>
             <li><a href="+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-        <ul>
-            <li>
-                <h3>присоединяйтесь</h3>
+          </ul>
+        </address>
+            <div>присоединяйтесь</div> 
                 <ul>
                     <li><a href="">Instagram</a></li>  
                     <li><a href="">Twitter</a></li>
                     <li><a href="">Facebook</a></li>
                     <li><a href="">Linkedln</a></li> 
                 </ul>
-            </li>
-            <li>
-                <h3>Подпишитесь на рассылку</h3>
-            </li>
-        </ul>
-        <p>2020 | Developed by GoIT Students</p>
+            <div>Подпишитесь на рассылку</div>
+            <p>2020 | Developed by GoIT Students</p>
     </footer>
-    
+ 
 </body>
 </html>
