--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:ital,wght@0,700;1,400&display=swap" 
+    rel="stylesheet">
+    <link rel="stylesheet" href="./css/main.css" />
 </head>
 <body>
     <header>
         <!-- Site header -->
         <nav>
-         <a href="#"><span>Web</span>Studio</a>
+         <a href="#" class="logo"><span>Web</span>Studio</a>
          <ul>
             <li><a href="">Студия</a></li>
             <li><a href="">Портфолио</a></li>
@@ -165,3 +168,4 @@
  
 </body>
 </html>
+
